--- a/.babelrc
+++ b/.babelrc
@@ -1,19 +1,25 @@
 {
   "presets": [
     [
-      "@babel/preset-env"
-      // {
-      //   "modules": false
-      // }
+      "@babel/preset-env",
+      {
+        "modules": false
+      }
     ],
     "@babel/preset-react",
     "@babel/preset-typescript"
   ],
+  "env": {
+    "test": {
+      "presets": [["@babel/preset-env"], "@babel/preset-react", "@babel/preset-typescript"]
+    }
+  },
   "plugins": [
     [
       "@babel/plugin-transform-runtime",
       {
-        "corejs": 3
+        "corejs": 3,
+        "helper": true
       }
     ],
     "@babel/plugin-proposal-class-properties"
