--- a/.babelrc
+++ b/.babelrc
@@ -22,6 +22,7 @@
         "helper": true
       }
     ],
-    "@babel/plugin-proposal-class-properties"
+    ["@babel/plugin-proposal-decorators", { "legacy": true }],
+    ["@babel/plugin-proposal-class-properties", { "loose": true }]
   ]
 }
